cluster/publicFacing/xmpp/xmpp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody-deployment
  labels:
    app: prosody
  namespace: xmpp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      serviceAccountName: tailscale
      containers:
      - name: prosody
        image: prosodyim/prosody:13.0
        ports:
        - containerPort: 5222
      - name: ts-sidecar
        imagePullPolicy: Always
        image: "ghcr.io/tailscale/tailscale:latest"
        securityContext:
          privileged: true
