cluster/publicFacing/xmpp/xmppsvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xmpp-service
  namespace: xmpp
spec:
  type: LoadBalancer
  selector:
    app: prosody
  ports:
  - port: 5222
    name: insecure
    targetPort: 5222
  - port: 5269
    name: s2s
    targetPort: 5269
