cluster/publicFacing/xmpp/xmppingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: xmpp-ingress
  namespace: xmpp
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`xmpp.caffeinatedope.net`)
    kind: Rule
    services:
    - name: xmpp-service
      port: 5222
